# Thesis-main

./: Data acquisition and pre-processing of satellite precipitation data.ipynb  Data acquisition for thesis.ipynb  DataPreprocessingThesis.ipynb  pyproject.toml
